--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -147,6 +147,7 @@
         </div>
       </div>
     </div>
+    <div>
     <div 
       class="col-md-8 mt-3"
       *ngIf="selectedQuiz == undefined"
@@ -178,4 +179,5 @@
         </p>
       </div>
     </div>
+  </div>
   </div>
