--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,10 +1,30 @@
 <div class="container">
   <div class="row">
     <div class="col-md-4">
-      Overview
+      <!-- fill in button. (element) btn.mt3 (. for spaces) class (button marginTop3 & bottom) & then push Tab -->
+      <button class="btn btn-outline-success mt-3 mb-3">Add New Quiz</button>
+      <div class="card">
+        <div class="card-header">Quiz List</div>
+        <div class="card-body">Coming Soon..</div>
+      </div>
     </div>
     <div class="col-md-8">
-      Detail
+      <div>
+        <button class="btn btn-outline-dark mt-3 mb-3">Save</button>
+        <button class="btn btn-link">Cancel</button>
+      </div>
+      <div class="card">
+        <div class="card-header">General</div>
+        <div class="card-body">Coming Soon..</div>
+      </div>
+      <div class="card mt-3">
+        <div class="card-header">Questions</div>
+        <div class="card-body">Coming Soon..</div>
+      </div>
+      <div class="card mt-3">
+        <div class="card-header">Other</div>
+        <div class="card-body">Coming Soon..</div>
+      </div>
     </div>
   </div>
 </div>
