--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,16 @@
 <div class="container">
+
+  <div
+   class="container row"
+   *ngIf="loadingPage"
+   >
+    <div class="col-md-12">
+      <div class="alert alert-info">
+        Loading.......
+      </div>
+    </div>
+  </div>
+
   <div 
     class="row"
     *ngIf="errorLoadingQuizzes"
@@ -11,7 +23,7 @@
   </div>
   <div 
     class="row"
-    *ngIf="!errorLoadingQuizzes"
+    *ngIf="loadingPage && !errorLoadingQuizzes"
   >
     <div class="col-md-4">
       <button 
