--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -11,7 +11,9 @@
           <button 
             class="list-group-item list-group-item-action d-flex justify-content-between align-items-center"
             *ngFor="let q of quizzes"
+            (click)="selectQuiz(q)"
           >
+            <!-- get variable -->
             {{ q.quizName }}
             <small class="font-itallic font-weight lighter">
               {{ q.quizQuestions.length }} questions
