--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,7 @@
 <div class="container">
   <div
     class="row"
-    *ngIf="errorLoadingQuizzes"
+    *ngIf="loading"
   >
       <div class="col-md-12">
         <div class="alert alert-dark mt-3">
