Created error handling logic for API  call to quiz service, HTML to display info to user
*ngIf="errorLoadingQuiz""

--
errorLoadingQuiz = false;

err => {
  this.errorLoadingQuiz = true
}

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,18 @@
 <div class="container">
-  <div class="row">
+  <div 
+    class="row"
+    *ngIf="errorLoadingQuiz"
+>
+    <div class="col-md-12 mt-3">
+      <div class="alert alert-info">
+        Error loading quizzes, try again later
+      </div>
+    </div>
+  </div>
+  <div 
+    class="row"
+    *ngIf="!errorLoadingQuiz"
+  >
     <div class="col-md-4">
       <button 
         class="btn btn-outline-success mt-3 mb-3"
