--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -13,7 +13,7 @@
       </div>
     </div>
   </div>
-  <div class="row" *ngIf="!errorLoadingQuizzes || !loadingState">
+  <div class="row" *ngIf="!errorLoadingQuizzes && !loadingState">
     <div class="col-md-4">
       <button class="btn btn-outline-success mt-3 mb-3" (click)="addNewQuiz()">
         Add New Quiz
