--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -57,8 +57,8 @@
         <button class="btn btn-outline-dark">
           Save
         </button>
-        <button class="btn btn-link">
-          Cancel
+        <button class="btn btn-link" (click)="cancelChanges()">
+          Cancel Changes
         </button>
       </div>
       <div class="card">
