--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,11 +3,8 @@
     <div class="col-md-4">
       <button class="btn btn-outline-success mt-3 mb-3">Add New Quiz</button>
       <div class="card">
-        <div class="card-header">
-          Quiz List
-        </div>
-        <div class="card-body">
-          Coming Soon
+        <div class="list-group list-group-flush">
+          <button *ngFor="let q of quizzes" class="list-group-item list-group-item-action">{{ q.quizName }}</button>
         </div>
       </div>
     </div>
