--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,7 +4,12 @@
       <button class="btn btn-outline-success mt-3 mb-3">Add New Quiz</button>
       <div class="card">
         <div class="list-group list-group-flush">
-          <button *ngFor="let q of quizzes" class="list-group-item list-group-item-action">{{ q.quizName }}</button>
+          <button *ngFor="let q of quizzes" class="list-group-item list-group-item-action d-flex justify-content-between align-items-center">
+            {{ q.quizName }}
+            <small class="font-itallic font-weight-lighter">
+              {{ q.quizQuestions.length }} questions
+            </small>
+          </button>
         </div>
       </div>
     </div>
