--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -7,7 +7,8 @@
           <button 
             *ngFor="let q of quizzes" 
             class="list-group-item list-group-item-action d-flex justify-content-between align-items-center"
-            (click)="selectQuiz(q)">
+            (click)="selectQuiz(q)"
+            [class.active]="q === selectedQuiz">
             {{ q.quizName }}
             <small class="font-itallic font-weight-lighter">
               {{ q.quizQuestions.length }} questions
@@ -16,7 +17,9 @@
         </div>
       </div>
     </div>
-    <div class="col-md-8">
+    <div 
+      class="col-md-8"
+      *ngIf="selectedQuiz != undefined">
       <div class="mt-3 mb-3">
         <button class="btn btn-outline-dark">Save</button>
         <button class="btn btn-link">Cancel</button>
@@ -25,7 +28,7 @@
             General
           </div>
           <div class="card-body">
-            Coming Soon
+            {{ selectedQuiz.quizName }}
           </div>
         </div>
         <div class="card mt-3">
@@ -33,7 +36,7 @@
             Questions
           </div>
           <div class="card-body">
-            Coming Soon
+            {{ selectedQuiz.quizQuestions }}
           </div>
         </div>
         <div class="card mt-3">
@@ -44,6 +47,13 @@
             Coming Soon
           </div>
         </div>
+      </div>
+    </div>
+    <div class="col-md-8 mt-3"
+    *ngIf="selectedQuiz === undefined">
+      <div class="card bg-light text-center">
+        <h2>No Quiz Selected</h2>
+        <p>Select or add a new quiz</p>
       </div>
     </div>
   </div>
