--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
 <div class="container">
-  <div 
+  <div
     class="row"
     *ngIf="loading"
   >
@@ -9,7 +9,7 @@
       </div>
     </div>
   </div>
-  <div 
+  <div
     class="row"
     *ngIf="errorLoadingQuizzes"
   >
@@ -19,12 +19,12 @@
       </div>
     </div>
   </div>
-  <div 
+  <div
     class="row"
     *ngIf="!loading && !errorLoadingQuizzes"
   >
     <div class="col-md-4">
-      <button 
+      <button
         class="btn btn-outline-success mt-3 mb-3"
         (click)="addNewQuiz()"
       >
@@ -32,7 +32,7 @@
       </button>
       <div class="card">
         <div class="list-group list-group-flush">
-          <button 
+          <button
             class="list-group-item list-group-item-action d-flex justify-content-between align-items-center"
             *ngFor="let q of quizzes"
             (click)="selectQuiz(q)"
@@ -49,7 +49,7 @@
         </div>
       </div>
     </div>
-    <div 
+    <div
       class="col-md-8"
       *ngIf="selectedQuiz != undefined"
     >
@@ -57,8 +57,11 @@
         <button class="btn btn-outline-dark">
           Save
         </button>
-        <button class="btn btn-link">
-          Cancel
+        <button
+            class="btn btn-link"
+            (click)="cancelAllChanges()"
+        >
+          Cancel all changes
         </button>
       </div>
       <div class="card">
@@ -66,7 +69,7 @@
           General
         </div>
         <div class="card-body">
-          <input 
+          <input
             type="text"
             class="form-control"
             [(ngModel)]="selectedQuiz.quizName"
@@ -79,18 +82,18 @@
           Questions
         </div>
         <div class="card-body">
-          <button 
+          <button
             class="btn btn-outline-success"
             (click)="addNewQuestion()"
           >
             Add New Question
           </button>
-          <div 
+          <div
             class="row mt-3"
             *ngFor="let question of selectedQuiz.quizQuestions"
           >
             <div class="col-md-10">
-              <input 
+              <input
                 type="text"
                 [(ngModel)]="question.questionName"
                 class="form-control"
@@ -98,7 +101,7 @@
               />
             </div>
             <div class="col-md-2">
-              <button 
+              <button
                 class="btn btn-link text-danger"
                 (click)="removeQuestion(question)"
               >
@@ -115,8 +118,8 @@
         <div class="card-body">
           <div class="form-check">
             <label class="form-check-label text-danger">
-              <input 
-                type="checkbox" 
+              <input
+                type="checkbox"
                 class="form-check-input"
                 [(ngModel)]="selectedQuiz.markedForDelete"
               />
@@ -126,7 +129,7 @@
         </div>
       </div>
     </div>
-    <div 
+    <div
       class="col-md-8 mt-3"
       *ngIf="selectedQuiz == undefined"
     >
@@ -136,19 +139,19 @@
         </h2>
         <p>
           Select or add a new quiz
-          <button 
+          <button
             class="btn btn-link"
             (click)="jsPromisesOne()"
           >
             One
           </button>
-          <button 
+          <button
             class="btn btn-link"
             (click)="jsPromisesTwo()"
           >
             Two
           </button>
-          <button 
+          <button
             class="btn btn-link"
             (click)="jsPromisesThree()"
           >
