--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -39,7 +39,7 @@
         <div class="card-header">General</div>
         <div class="card-body">
           <input type="text" 
-          [(ngModule)]={{ selectedQuiz.quizName }}
+          [(ngModel)]="selectedQuiz.quizName"
           class="form-control">
         </div>
       </div>
