--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -52,7 +52,32 @@
           Questions
         </div>
         <div class="card-body">
-          Coming soon
+          <button class="btn btn-outline-success"
+            (click)="addNewQuestion()"
+          >
+            Add Question
+          </button>
+          <!-- row using bootstrap grid -->
+          <div 
+            class="row mt-3"
+            *ngFor="let question of selectedQuiz.quizQuestions"
+            >
+            <!-- using grid, make div to take up 10 of the 12 columns -->
+            <div class="col-md-10">
+              <input type="text"
+                class="form-control"
+                [(ngModel)]="question.questionName"
+              >
+            </div>
+            <div class="col-md-2">
+              <!-- button link is just a link for a button -->
+              <button class="btn btn-link text-danger"
+              (click)="removeQuestion(question)"
+              >
+                Remove
+              </button>
+            </div>
+          </div>
         </div>
       </div>
       <div class="card mt-3">
