--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -40,9 +40,11 @@
           General
         </div>
         <div class="card-body">
+          <!-- use placeholder instead of label that browser is looking for -->
           <input 
             type="text"
             class="form-control"
+            placeholder="Enter Quiz Name"
             [(ngModel)]="selectedQuiz.quizName"
           />
         </div>
@@ -66,6 +68,7 @@
             <div class="col-md-10">
               <input type="text"
                 class="form-control"
+                placeholder="Enter Question Text"
                 [(ngModel)]="question.questionName"
               >
             </div>
