--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -16,8 +16,12 @@
             [class.active]="q === selectedQuiz"
             [style.text-decoration]="q.markedForDelete ? 'line-through' : 'inherit'"
           >
-            {{ q.quizName }}
-            <small class="font-itallic font-weight-lighter">
+          <!-- adds elipses ... for long text -->
+            <span class="text-truncate">
+              {{ q.quizName }}
+            </span>
+            <!-- add nowrap so this doesn't wrap -->
+            <small class="font-itallic font-weight-lighter text-nowrap">
               <!-- only show s if >1 question -->
               {{ q.quizQuestions.length}} question<span *ngIf="q.quizQuestions.length != 1">s</span>
             </small>
