--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,52 @@
-<h1>Sujal was here</h1>
+<div class="container">
+  <div class="row">
+    <div class="col-md-4">
+      <button class="btn btn-outline-success mt-3 mb-3">
+        Add new Quiz
+      </button>
+      <div class="card">
+        <div class="card-header">
+          Quiz List
+        </div>
+        <div class="card-body">
+          Coming Soon
+        </div>
+      </div>
+    </div>
+    <div class="col-md-8">
+      <div class="mt-3 mb-3">
+        <button class="btn btn-outline-dark">
+          Save
+        </button>
+        <button class="btn btn-outline-link">
+          Cancel
+        </button>
+      </div>
+      <div class="card">
+        <div class="card-header">
+          General
+        </div>
+        <div class="card-body">
+          Coming Soon!
+        </div>
+      </div>
+
+      <div class="card mt-3">
+        <div class="card-header">
+          Questions
+        </div>
+        <div class="card-body">
+          Coming Soon!
+        </div>
+      </div>
+
+      <div class="card mt-3">
+        <div class="card-header">
+          Other
+        </div>
+        <div class="card-body">
+          Coming Soon!
+        </div>
+      </div>
+    </div>
+  </div>
