--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -57,16 +57,22 @@
         <button class="btn btn-outline-dark">
           Save
           <span 
+            class="badge bg-success ms-1"
+            *ngIf="addedQuizCount > 0"
+          >
+            + {{ addedQuizCount }}
+          </span>
+          <span 
             class="badge bg-danger ms-1"
             *ngIf="deletedQuizCount > 0"
           >
             - {{ deletedQuizCount }}
           </span>
           <span 
-            class="badge bg-success ms-1"
-            *ngIf="addedQuizCount > 0"
+            class="badge bg-warning ms-1"
+            *ngIf="editedQuizCount > 0"
           >
-            + {{ addedQuizCount }}
+            * {{ editedQuizCount }}
           </span>
         </button>
         <button 
