--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -56,23 +56,8 @@
       <div class="mt-3 mb-3">
         <button class="btn btn-outline-dark">
           Save
-          <span 
-            class="badge bg-danger ms-1"
-            *ngIf="deletedQuizCount > 0"
-          >
-            -{{ deletedQuizCount }}
-          </span>
-          <span 
-            class="badge bg-success ms-1"
-            *ngIf="addedQuizCount > 0"
-          >
-            +{{ addedQuizCount }}
-          </span>
-          <span 
-            class="badge bg-secondary ms-1"
-            *ngIf="editedQuizCount > 0"
-          >
-            *{{ editedQuizCount }}
+          <span class="badge badge-danger ml-1">
+            -3
           </span>
         </button>
         <button 
@@ -157,24 +142,24 @@
         </h2>
         <p>
           Select or add a new quiz
-          <button 
+          <!-- <button 
             class="btn btn-link"
             (click)="jsPromisesOne()"
           >
             One
-          </button>
-          <button 
+          </button> -->
+          <!-- <button 
             class="btn btn-link"
             (click)="jsPromisesTwo()"
           >
             Two
-          </button>
-          <button 
+          </button> -->
+          <!-- <button 
             class="btn btn-link"
             (click)="jsPromisesThree()"
           >
             Three
-          </button>
+          </button> -->
         </p>
       </div>
     </div>
