--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -56,8 +56,10 @@
       <div class="mt-3 mb-3">
         <button class="btn btn-outline-dark">
           Save
-          <span class="badge badge-danger ml-1">
-            -3
+          <span class="badge badge bg-danger ml-1"
+            *ngIf="deletedQuizCount > 0"
+          >
+            {{ deletedQuizCount }}
           </span>
         </button>
         <button 
