--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -56,10 +56,15 @@
       <div class="mt-3 mb-3">
         <button class="btn btn-outline-dark">
           Save
+          <span class="badge badge bg-success ml-1"
+            *ngIf="addedQuizCount > 0"
+          >
+          +{{ addedQuizCount }}
+          </span>
           <span class="badge badge bg-danger ml-1"
             *ngIf="deletedQuizCount > 0"
           >
-            {{ deletedQuizCount }}
+            -{{ deletedQuizCount }}
           </span>
         </button>
         <button 
