Added Edited count badge

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -66,6 +66,11 @@
           >
             -{{ deletedQuizCount }}
           </span>
+          <span class="badge badge bg-dark ml-1"
+            *ngIf="editedQuizCount > 0"
+          >
+            *{{ editedQuizCount }}
+          </span>
         </button>
         <button 
           class="btn btn-link"
