--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -50,9 +50,47 @@
       </div>
     </div>
     <div 
-      class="col-md-8"
-      *ngIf="selectedQuiz != undefined"
+      class="col-md-8 mt-3"
+      *ngIf="selectedQuiz == undefined"
     >
+      <div class="card bg-light text-center">
+        <h2>
+          No Quiz Selected
+        </h2>
+        <p>
+          Select or add a new quiz
+          <!-- <button 
+            class="btn btn-link"
+            (click)="jsPromisesOne()"
+          >
+            One
+          </button> -->
+          <!-- <button 
+            class="btn btn-link"
+            (click)="jsPromisesTwo()"
+          >
+            Two
+          </button> -->
+          <!-- <button 
+            class="btn btn-link"
+            (click)="jsPromisesThree()"
+          >
+            Three
+          </button> -->
+        </p>
+      </div>
+    </div>
+    <!-- [@xxxx] need data from component (ts) to view (html) 
+          (@xxxx) sends data from view to component .done event -->
+    <div
+      class="col-md-8"
+      [@detailsFromLeft]="detailsFromLeftAnimationState"
+      (@detailsFromLeft.done)="detailsFromLeftAnimationDone()"
+    >
+      <div 
+        class="col-md-8"
+        *ngIf="selectedQuiz != undefined"
+       >
       <div class="mt-3 mb-3">
         <button class="btn btn-outline-dark">
           Save
@@ -143,36 +181,8 @@
           </div>
         </div>
       </div>
-    </div>
-    <div 
-      class="col-md-8 mt-3"
-      *ngIf="selectedQuiz == undefined"
-    >
-      <div class="card bg-light text-center">
-        <h2>
-          No Quiz Selected
-        </h2>
-        <p>
-          Select or add a new quiz
-          <!-- <button 
-            class="btn btn-link"
-            (click)="jsPromisesOne()"
-          >
-            One
-          </button> -->
-          <!-- <button 
-            class="btn btn-link"
-            (click)="jsPromisesTwo()"
-          >
-            Two
-          </button> -->
-          <!-- <button 
-            class="btn btn-link"
-            (click)="jsPromisesThree()"
-          >
-            Three
-          </button> -->
-        </p>
       </div>
     </div>
+    
+    
   </div>
