--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -44,6 +44,7 @@
             type="text"
             class="form-control"
             [(ngModel)]="selectedQuiz.quizName"
+            placeholder="Enter Quiz Name"
           />
         </div>
       </div>
@@ -66,6 +67,7 @@
                 type="text"
                 [(ngModel)]="question.questionName"
                 class="form-control"
+                placeholder="Enter Question Name"
               />
             </div>
             <div class="col-md-2">
