--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,20 +1,13 @@
 <div class="container">
   <div class="row">
     <div class="col-md-4">
-      <button 
-        class="btn btn-outline-success mt-3 mb-3"
-        (click)="addNewQuiz()"
-      >
+      <button class="btn btn-outline-success mt-3 mb-3" (click)="addNewQuiz()">
         Add New Quiz
       </button>
       <div class="card">
         <div class="list-group list-group-flush">
-          <button 
-            class="list-group-item list-group-item-action d-flex justify-content-between align-items-center"
-            *ngFor="let q of quizzes"
-            (click)="selectQuiz(q)"
-            [class.active]="q === selectedQuiz"
-          >
+          <button class="list-group-item list-group-item-action d-flex justify-content-between align-items-center"
+            *ngFor="let q of quizzes" (click)="selectQuiz(q)" [class.active]="q === selectedQuiz">
             {{ q.quizName }}
             <small class="font-itallic font-weight-lighter">
               {{ q.quizQuestions.length}} questions
@@ -23,10 +16,7 @@
         </div>
       </div>
     </div>
-    <div 
-      class="col-md-8"
-      *ngIf="selectedQuiz != undefined"
-    >
+    <div class="col-md-8" *ngIf="selectedQuiz != undefined">
       <div class="mt-3 mb-3">
         <button class="btn btn-outline-dark">
           Save
@@ -40,16 +30,26 @@
           General
         </div>
         <div class="card-body">
-          <input 
-            type="text"
-            class="form-control"
-            [(ngModel)]="selectedQuiz.quizName"
-          />
+          <input type="text" class="form-control" [(ngModel)]="selectedQuiz.quizName" />
         </div>
       </div>
       <div class="card mt-3">
         <div class="card-header">
-          Questions
+          <button class="btn btn-outline-success"
+          (click)="addNewQuestion()"
+          >
+            Add New Question
+          </button>
+          <div class="row mt-3" *ngFor="let question of selectedQuiz.quizQuestions">
+            <div class="col-md-10">
+              <input type="text" [(ngModel)]="question.questionName" class="form-control" />
+            </div>
+            <div class="col-md-2">
+              <button class="btn btn-link text-danger"
+              (click)="removeQuestion(question)"
+              >Remove</button>
+            </div>
+          </div>
         </div>
         <div class="card-body">
           Coming soon
@@ -64,10 +64,7 @@
         </div>
       </div>
     </div>
-    <div 
-      class="col-md-8 mt-3"
-      *ngIf="selectedQuiz == undefined"
-    >
+    <div class="col-md-8 mt-3" *ngIf="selectedQuiz == undefined">
       <div class="card bg-light text-center">
         <h2>
           No Quiz Selected
