--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -7,7 +7,9 @@
       <div class="card">
         <div class="list-group list-group-flush">
           <button class="list-group-item list-group-item-action d-flex justify-content-between align-items-center"
-            *ngFor="let q of quizzes" (click)="selectQuiz(q)" [class.active]="q === selectedQuiz">
+            *ngFor="let q of quizzes" (click)="selectQuiz(q)" [class.active]="q === selectedQuiz"
+            [style.text-decoration] ="q.markedForDelete ? 'line-through':'inherit'"
+            >
             {{ q.quizName }}
             <small class="font-itallic font-weight-lighter">
               {{ q.quizQuestions.length}} questions
@@ -60,7 +62,13 @@
           Other
         </div>
         <div class="card-body">
-          Coming soon
+          <div class="form-check">
+            <label class="form-check-label text-danger">
+              <input type="checkbox" class="form-check-input"
+              [(ngModel)]="selectedQuiz.markedForDelete"
+              />Mark for Delete
+            </label>
+          </div>
         </div>
       </div>
     </div>
