--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -54,8 +54,8 @@
     </div>
     <div class="col-md-8" [@detailsFromLeft]="detailsLeftAnimationState" (@detailsFromLeft.done)="detailsLeftAnimationDone()">
       <div *ngIf="selectedQuiz != undefined">
-        <div class="mt-3 mb-3">
-          <button class="btn btn-outline-dark">
+        <div class="mt-3 mb-3" [@pulseSaveCancelButtons]="deletedQuizCount + editedQuizCount + addedQuizCount > 0 ? 'somethingToSave' : 'nothingToSave'">
+          <button class="btn btn-outline-dark" (click)="saveQuizzes()">
             Save
             <span class="badge bg-danger ms-1" *ngIf="deletedQuizCount > 0">
               -{{ deletedQuizCount }}
