--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -44,6 +44,7 @@
             type="text"
             class="form-control"
             [(ngModel)]="selectedQuiz.quizName"
+            placeholder="enter quiz name"
           />
         </div>
       </div>
@@ -67,6 +68,7 @@
               type="text"
               [(ngModel)]="question.questionName"
               class="form-control"
+              placeholder="enter question text"
               >
             </div>
             <div class="col-md-2">
