--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -68,6 +68,12 @@
             >
             +{{ newQuizCount }}
           </span>
+          <span 
+            class="badge bg-secondary ms-1"
+            *ngIf="editedQuizCount > 0"
+            >
+            *{{ editedQuizCount }}
+          </span>
         </button>
         <button 
           class="btn btn-link"
